--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <h4>I'M Pallavi Singh</h4>
                             <h6>A Lead <span>UX & UI</span> designer based in <span>India</span></h6>
                             <p>I'm a web developer looking to facilitate the creation of modern
-                                and aesthetically pleasing websites. I also has command in Python and problem solving.
+                                and aesthetically pleasing websites. I also have command in Python and problem solving.
                             </p>
                             <div class="info">
                                 <div class="list">
@@ -111,7 +111,7 @@
                                     <p>skype.4004</p>
                                 </div>
                                 <div class="list">
-                                    <label>Adress:</label>
+                                    <label>Address:</label>
                                     <p>Faizabad Road Lucknow</p>
                                 </div>
                                 <div class="list">
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <label>Bootsrap</label>
+                    <label>Bootstrap</label>
                     <div class="progress" data-text="60%">
                         <div class="inner" style="width: 60%;">
                         </div>
@@ -201,7 +201,7 @@
                 <div class="card">
                     <div class="box">
                         <div data-aos="zoom-in-down">
-                            <h3>SounPot</h3>
+                            <h3>SoundPot</h3>
                             <h4>Python-Django</h4>
                         </div>
                         <a href="https://github.com/pallavi223/SoundPot"><img src="images/music.webp"
