--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
             </div>
             <div class="timeline">
                 <ul>
-                    <li class="date" data-date="2020 - Present">
-                        <h1>Shri Ramswaroop Memorial College Engineering and Management </h1>
+                    <li class="date" data-date="2017 - Present">
+                        <h1>Shri Ramswaroop Memorial College of Engineering and Management </h1>
                         <p>Bachelor of Information Technology</p>
 
                     </li>
