--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div class="text">
                             <h4>I'M Pallavi Singh</h4>
-                            <h6>A Lead <span>UX & UI</span> designer based in <span>India</span></h6>
+                            <h6> Frontend <span>Developer</span></h6>
                             <p>I'm a web developer looking to facilitate the creation of modern
                                 and aesthetically pleasing websites. I also have command in Python and problem solving.
                             </p>
